kotlin/src/main/kotlin/com/example/kotlin/global/error/response/ErrorResponse.kt
package com.example.kotlin.global.error.response

interface ErrorResponse {

    val status: Int
    val message: String

}